--- a/activity/package.json
+++ b/activity/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node app.js"
+    "start" :"node app.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express":"^4.17.1",
+    "socket.io":"^2.3.0"
+
+  }
 }
