--- a/package.json
+++ b/package.json
@@ -2,22 +2,14 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ankur2811/whiteboard.git"
+    "start":"node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ankur2811/whiteboard/issues"
-  },
-  "homepage": "https://github.com/ankur2811/whiteboard#readme",
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
